--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
         	<groupId>org.apache.directory.server</groupId>
         	<artifactId>apacheds-server-jndi</artifactId>
         	<version>1.5.5</version>
-    	</dependency>					   
+    	</dependency>
+    	
+    	<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>					   
     </dependencies>
 
     <properties>
