--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
         <version>1.1.8.RELEASE</version>
     </parent>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>1.0.0.Final</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
     		<groupId>org.springframework.boot</groupId>
@@ -36,14 +48,25 @@
         	<groupId>org.apache.directory.server</groupId>
         	<artifactId>apacheds-server-jndi</artifactId>
         	<version>1.5.5</version>
-    	</dependency>
-    	
+    	</dependency>   	
     	<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
-        </dependency>					   
+        </dependency>       
+        <dependency>
+        	<groupId>org.jboss.spec</groupId>
+        	<artifactId>jboss-javaee-6.0</artifactId>
+        	<version>1.0.0.Final</version>
+        	<type>pom</type>
+        	<scope>provided</scope>
+    	</dependency>  	
+    	<dependency>
+    		<groupId>org.jboss.arquillian.junit</groupId>
+    		<artifactId>arquillian-junit-container</artifactId>
+    		<scope>test</scope>
+		</dependency>     					   
     </dependencies>
 
     <properties>
