--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,6 @@
         <version>1.1.8.RELEASE</version>
     </parent>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.0.0.Final</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
     		<groupId>org.springframework.boot</groupId>
@@ -54,22 +42,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
-        </dependency>       
-        <dependency>
-        	<groupId>org.jboss.spec</groupId>
-        	<artifactId>jboss-javaee-6.0</artifactId>
-        	<version>1.0.0.Final</version>
-        	<type>pom</type>
-        	<scope>provided</scope>
-    	</dependency>  	
-    	<dependency>
-    		<groupId>org.jboss.arquillian.junit</groupId>
-    		<artifactId>arquillian-junit-container</artifactId>
-    		<scope>test</scope>
-		</dependency>     					   
+        </dependency>   					   
     </dependencies>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>feedbackapp.Application</start-class>
     </properties>
 
