--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -37,29 +37,29 @@
         </dependency>
         
         <!-- Arquillian JUnit standalone -->
-		<!--dependency>
+		<dependency>
    			<groupId>org.jboss.arquillian.junit</groupId>
    			<artifactId>arquillian-junit-standalone</artifactId>
    			<version>1.1.5.Final</version>
    			<scope>test</scope>
-		</dependency-->
+		</dependency>
 		
-		<!--dependency>
+		<dependency>
    			<groupId>org.jboss.arquillian.graphene</groupId>
    			<artifactId>arquillian-graphene</artifactId>
    			<version>2.0.0.Alpha2</version>
    			<type>pom</type>
    			<scope>test</scope>
-		</dependency-->
+		</dependency>
  
 		<!-- Graphene WebDriver -->
-		<!--dependency>
+		<dependency>
    			<groupId>org.jboss.arquillian.graphene</groupId>
    			<artifactId>graphene-webdriver</artifactId>
    			<version>2.0.0.Alpha3</version>
    			<type>pom</type>
    			<scope>test</scope>
-		</dependency-->	   					   
+		</dependency>	   					   
     </dependencies>
 
     <properties>
@@ -96,9 +96,5 @@
             </plugin>
         </plugins>
     </build>
-    
-    
-    
-    
-    
+   
 </project>
