--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -81,7 +81,7 @@
                 <version>4.6.1</version>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <phase>integration-test</phase>
                         <goals>
                             <goal>test</goal>
                         </goals>
