--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -101,7 +101,19 @@
 					<plugin>
 						<groupId>com.smartbear.soapui</groupId>
 						<artifactId>soapui-pro-maven-plugin</artifactId>
-						<version>4.6.1</version>
+						<version>5.1.2</version>
+						<dependencies> 
+							<dependency> 
+								<groupId>org.reflections</groupId> 
+								<artifactId>reflections</artifactId> 
+								<version>0.9.9-RC1</version>
+							</dependency>
+							<!--dependency>
+								<groupId>org.apache.poi</groupId>
+								<artifactId>poi-ooxml</artifactId>
+								<version>3.10-FINAL</version>
+							</dependency-->
+							</dependencies> 
 						<executions>
 							<execution>
 								<phase>test</phase>
@@ -112,7 +124,13 @@
 									<projectFile>FeedbackApp-REST-soapui.xml</projectFile>
 									<junitReport>true</junitReport>
 									<outputFolder>results-output</outputFolder>
-									<testFailIgnore>true</testFailIgnore>
+									<testFailIgnore>true</testFailIgnore>					
+									<soapuiProperties>
+										<property>
+											<name>soapui.logroot</name>
+											<value>results-output/logs/</value>
+										</property>
+									</soapuiProperties>
 								</configuration>
 							</execution>
 						</executions>
