--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -10,7 +10,7 @@
 
 	<dependencyManagement>
 	    <dependencies>
-	        <!--dependency!!>
+	        <!--dependency>
 	            <groupId>org.jboss.arquillian</groupId>
 	            <artifactId>arquillian-bom</artifactId>
 	            <version>1.1.5.Final</version>
@@ -66,12 +66,25 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Allure reporter -->
+		<dependency>
+			<groupId>ru.yandex.qatools.allure</groupId>
+			<artifactId>allure-junit-adaptor</artifactId>
+			<version>${allure.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<apphost>fbgd.herokuapp.com</apphost>
 		<browser>htmlUnit</browser> <!-- htmlUnit will be the default browser -->
+
+		<allure.version>1.4.3</allure.version>
+		<aspectj.version>1.7.4</aspectj.version>
+		<compiler.version>1.7</compiler.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<profiles>
@@ -158,6 +171,46 @@
 	</pluginRepositories>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-archetype-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>${compiler.version}</source>
+					<target>${compiler.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14</version>
+				<configuration>
+					<testFailureIgnore>false</testFailureIgnore>
+					<argLine>
+						-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+					</argLine>
+					<properties>
+						<property>
+							<name>listener</name>
+							<value>ru.yandex.qatools.allure.junit.AllureRunListener</value>
+						</property>
+					</properties>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjweaver</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
@@ -165,5 +218,16 @@
 			</testResource>
 		</testResources>
 	</build>
+
+	<reporting>
+		<excludeDefaults>true</excludeDefaults>
+		<plugins>
+			<plugin>
+				<groupId>ru.yandex.qatools.allure</groupId>
+				<artifactId>allure-maven-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
+		</plugins>
+	</reporting>
    
 </project>
